started sidebar, added bootstrap

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+.sidebar {
+  padding: 10px;
+}
+
+.logo-header {
+
+}
+
+.sidebar-money {
+
+}
+
+.next-month {
+  
+}
