formatting changes for sidebar and driver

--- a/src/App.css
+++ b/src/App.css
@@ -39,16 +39,13 @@
 
 .sidebar {
   padding: 10px;
+  background-color: gray;
 }
 
 .logo-header {
-
+  font-size: 3.5rem;
 }
 
-.sidebar-money {
-
-}
-
-.next-month {
-  
+.pocket-section {
+  padding-top: 10%;
 }
