--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,26 @@
   font-size: large;
   padding: 15px 40px;
 }
+
+.percentage-block {
+  display: inline-block;
+  vertical-align: top;
+  padding: 0 66px;
+}
+
+.stocks-img {
+  width: 100%;
+  height: 70%;
+}
+
+.image-block {
+  padding-bottom: 2.5%;
+}
+
+.card-button {
+  margin: 5px;
+}
+
+.text-units {
+  font-size: x-large;
+}
