--- a/src/App.css
+++ b/src/App.css
@@ -43,12 +43,17 @@
   bottom: 0;
   left: 0;
   min-height: 100vh;
+  width: 20vw;
   padding: 10px;
   background-color: gray;
 }
 
 .sidebar-img {
   height: 15%;
+}
+
+.sidebar-money {
+    font-size: 24px;
 }
 
 .prof-image {
