adding my changes

--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,10 @@
   display: flex;
   flex-direction: column;
 }
+
+.gis-block {
+  display: inline-block;
+  vertical-align: top;
+  padding: 0 90px;
+  font-size: x-large;
+}
