almost working, however, data does not visually update when a person buys/sells and when I update to next month it does not reset the stock values.

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,8 @@
 .percentage-block {
   display: inline-block;
   vertical-align: top;
-  padding: 0 66px;
+  padding: 0 5px;
+  font-size: large;
 }
 
 .stocks-img {
