--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,7 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 5em;
+    align-items: center;
 }
 .gic{
   position: relative;
@@ -151,10 +152,6 @@
 }
 
 .card-button{
-width: 20em;
-height: 2.6em;
-margin-right: 8em;
-margin-top: 3em;
 background-color: #FAF3E9;
 color: black;
 }
