--- a/src/App.css
+++ b/src/App.css
@@ -111,14 +111,17 @@
 .card-account{
   background-color: #FAF3E9;
   width: 35vw;
-  height: 35vh;
-  margin: 1em 1em;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  height: 45vh;
+  margin-top: 1em;
+  margin-left: auto;
+  margin-right: 0;
+  /* margin: 1em 1em; */
+  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
 
 }
 
 .card-body{
- text-align: center;
+ /* text-align: center; */
   height: 45vh;
 }
 
