--- a/src/App.css
+++ b/src/App.css
@@ -112,18 +112,20 @@
 .card-account{
   background-color: #FAF3E9;
   width: 35vw;
-  height: 45vh;
+  height: 50vh;
   margin-top: 1em;
-  margin-left: auto;
+  /* margin-left: auto; */
   margin-right: 0;
   /* margin: 1em 1em; */
-  /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
 }
 
 .card-body{
  /* text-align: center; */
   height: 45vh;
+  padding-top: 3em;
+   background-color: #FAF3E9;
 }
 
 .card-title{
@@ -141,21 +143,27 @@
   padding-bottom: 5em;
     align-items: center;
 }
-.gic{
-  position: relative;
+.card{
+  /* position: relative; */
+   background-color: #FAF3E9;
+   width: 25vw;
+   height:30vh;
+   margin-top: 1em;
+   
 }
 .gis-block {
   display: inline-block;
   vertical-align: top;
   padding: 0 90px;
   font-size: x-large;
+  background-color: #FAF3E9;
 }
 
 .card-button{
 width: 10em;
 height: 2.6em;
 margin-right: 2em;
-margin-top: 3em;
+margin-top: 1em;
 background-color: #FAF3E9;
 color: black;
 }
